--- a/lienhe.html
+++ b/lienhe.html
@@ -270,307 +270,66 @@
 			});
 		});
 		</script>
-	<!--================ End Home Banner Area =================-->
+    <!--================ End Banner Area =================-->
 
-	<!--================Category Area =================-->
-	<section class="category_area section-gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="single_travel wow fadeInUp" data-wow-duration="1s">
-								<figure>
-									<img class="img-fluid w-100" src="img/category/c1.jpg" alt="">
-								</figure>
-								<div class="overlay"></div>
-								<div class="text-wrap">
-									<h3>
-										<a href="#">Waterfall Travel</a>
-									</h3>
-									<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-										<div class="meta">
-											<a href="#">
-												<span class="icon fa fa-calendar"></span> March 14, 2018
-												<span class="icon fa fa-comments"></span> 05
-											</a>
-										</div>
-										<div>
-											<a class="read_more" href="#">Read More</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12">
-							<div class="single_travel wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-								<figure>
-									<img class="img-fluid w-100" src="img/category/c2.jpg" alt="">
-								</figure>
-								<div class="overlay"></div>
-								<div class="text-wrap">
-									<h3>
-										<a href="#">Waterfall Travel</a>
-									</h3>
-									<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-										<div class="meta">
-											<a href="#">
-												<span class="icon fa fa-calendar"></span> March 14, 2018
-												<span class="icon fa fa-comments"></span> 05
-											</a>
-										</div>
-										<div>
-											<a class="read_more" href="#">Read More</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12">
-							<div class="single_travel wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
-								<figure>
-									<img class="img-fluid w-100" src="img/category/c3.jpg" alt="">
-								</figure>
-								<div class="overlay"></div>
-								<div class="text-wrap">
-									<h3>
-										<a href="#">Waterfall Travel</a>
-									</h3>
-									<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-										<div class="meta">
-											<a href="#">
-												<span class="icon fa fa-calendar"></span> March 14, 2018
-												<span class="icon fa fa-comments"></span> 05
-											</a>
-										</div>
-										<div>
-											<a class="read_more" href="#">Read More</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<div class="single_travel wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-								<figure>
-									<img class="img-fluid w-100" src="img/category/c4.jpg" alt="">
-								</figure>
-								<div class="overlay"></div>
-								<div class="text-wrap">
-									<h3>
-										<a href="#">Waterfall Travel</a>
-									</h3>
-									<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-										<div class="meta">
-											<a href="#">
-												<span class="icon fa fa-calendar"></span> March 14, 2018
-												<span class="icon fa fa-comments"></span> 05
-											</a>
-										</div>
-										<div>
-											<a class="read_more" href="#">Read More</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12">
-							<div class="single_travel wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
-								<figure>
-									<img class="img-fluid w-100" src="img/category/c5.jpg" alt="">
-								</figure>
-								<div class="overlay"></div>
-								<div class="text-wrap">
-									<h3>
-										<a href="#">Waterfall Travel</a>
-									</h3>
-									<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-										<div class="meta">
-											<a href="#">
-												<span class="icon fa fa-calendar"></span> March 14, 2018
-												<span class="icon fa fa-comments"></span> 05
-											</a>
-										</div>
-										<div>
-											<a class="read_more" href="#">Read More</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12">
-							<div class="single_travel wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-								<figure>
-									<img class="img-fluid w-100" src="img/category/c6.jpg" alt="">
-								</figure>
-								<div class="overlay"></div>
-								<div class="text-wrap">
-									<h3>
-										<a href="#">Waterfall Travel</a>
-									</h3>
-									<div class="blog-meta white d-flex justify-content-between align-items-center flex-wrap">
-										<div class="meta">
-											<a href="#">
-												<span class="icon fa fa-calendar"></span> March 14, 2018
-												<span class="icon fa fa-comments"></span> 05
-											</a>
-										</div>
-										<div>
-											<a class="read_more" href="#">Read More</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+    <!--================Contact Area =================-->
+    <section class="contact_area section-gap">
+        <div class="container">
+            <div id="mapBox" class="mapBox" data-lat="40.701083" data-lon="-74.1522848" data-zoom="13" data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
+                data-mlat="40.701083" data-mlon="-74.1522848">
+            </div>
+            <div class="map-wrap" style="width:100%;" id="mapBox"></div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="contact_info">
+                        <div class="info_item">
+                            <i class="lnr lnr-home"></i>
+                            <h6>California, United States</h6>
+                            <p>Santa monica bullevard</p>
+                        </div>
+                        <div class="info_item">
+                            <i class="lnr lnr-phone-handset"></i>
+                            <h6><a href="#">00 (440) 9865 562</a></h6>
+                            <p>Mon to Fri 9am to 6 pm</p>
+                        </div>
+                        <div class="info_item">
+                            <i class="lnr lnr-envelope"></i>
+                            <h6><a href="#">support@colorlib.com</a></h6>
+                            <p>Send us your query anytime!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <form class="row contact_form" action="contact_process.php" method="post" id="contactForm"
+                        novalidate="novalidate">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-12 text-right">
+                            <button type="submit" value="submit" class="btn submit_btn">Send Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================Contact Area =================-->
 
-					<div class="row">
-						<div class="col-lg-12">
-							<nav class="blog-pagination justify-content-center d-flex">
-								<ul class="pagination">
-									<li class="page-item">
-										<a href="#" class="page-link" aria-label="Previous">
-											<span aria-hidden="true">
-												<span class="lnr lnr-chevron-left"></span>
-											</span>
-										</a>
-									</li>
-									<li class="page-item"><a href="#" class="page-link">01</a></li>
-									<li class="page-item active"><a href="#" class="page-link">02</a></li>
-									<li class="page-item"><a href="#" class="page-link">03</a></li>
-									<li class="page-item"><a href="#" class="page-link">04</a></li>
-									<li class="page-item"><a href="#" class="page-link">09</a></li>
-									<li class="page-item">
-										<a href="#" class="page-link" aria-label="Next">
-											<span aria-hidden="true">
-												<span class="lnr lnr-chevron-right"></span>
-											</span>
-										</a>
-									</li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="blog_right_sidebar">
-						<aside class="single_sidebar_widget search_widget">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Search Posts">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button"><i class="lnr lnr-magnifier"></i></button>
-								</span>
-							</div><!-- /input-group -->
-							<div class="br"></div>
-						</aside>
-						<aside class="single_sidebar_widget author_widget">
-							<img class="author_img img-fluid" src="img/blog/author.png" alt="">
-							<h4>Charlie ALison Barber</h4>
-							<p>Senior blog writer</p>
-
-							<p>Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend
-								money
-								on boot camp when you can get. Boot camps have itssuppor ters andits detractors.</p>
-							<div class="social_icon">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-github"></i></a>
-								<a href="#"><i class="fa fa-behance"></i></a>
-							</div>
-							<div class="br"></div>
-						</aside>
-						<aside class="single_sidebar_widget popular_post_widget">
-							<h3 class="widget_title">Popular Posts</h3>
-							<div class="media post_item">
-								<img src="img/blog/popular-post/post1.jpg" alt="post">
-								<div class="media-body">
-									<a href="blog-details.html">
-										<h3>Space The Final Frontier</h3>
-									</a>
-									<p>02 Hours ago</p>
-								</div>
-							</div>
-							<div class="media post_item">
-								<img src="img/blog/popular-post/post2.jpg" alt="post">
-								<div class="media-body">
-									<a href="blog-details.html">
-										<h3>The Amazing Hubble</h3>
-									</a>
-									<p>02 Hours ago</p>
-								</div>
-							</div>
-							<div class="media post_item">
-								<img src="img/blog/popular-post/post3.jpg" alt="post">
-								<div class="media-body">
-									<a href="blog-details.html">
-										<h3>Astronomy Or Astrology</h3>
-									</a>
-									<p>03 Hours ago</p>
-								</div>
-							</div>
-							<div class="br"></div>
-						</aside>
-						<aside class="single_sidebar_widget newsletter_widget">
-							<h4 class="widget_title">Newsletter</h4>
-							<div id="mc_embed_signup">
-								<form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-								 method="get" class="subscribe_form relative">
-									<div class="input-group d-flex flex-row">
-										<input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-										 required="" type="email">
-										<button class="btn sub-btn">
-											<span class="lnr lnr-arrow-right"></span>
-										</button>
-									</div>
-									<div class="mt-10 info"></div>
-								</form>
-							</div>
-						</aside>
-						<div class="br"></div>
-						<aside class="single_sidebar_widget post_category_widget">
-							<h4 class="widget_title">Post Catgories</h4>
-							<ul class="list cat-list">
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Technology</p>
-										<p>37</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Lifestyle</p>
-										<p>24</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Fashion</p>
-										<p>59</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Art</p>
-										<p>29</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Food</p>
-										<p>15</p>
-									</a>
-								</li>
-							</ul>
-						</aside>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================Category Area =================-->
-
-	 <!--================ start footer Area  =================-->
-	 <footer class="footer-area section-gap">
+     <!--================ start footer Area  =================-->
+	<footer class="footer-area section-gap">
 		<div class="container">
 			<div class="single-footer-widget footer_middle">
 				<img src="images/footer_logo.png" alt="" width="200" height="170">
