--- a/gioithieu.html
+++ b/gioithieu.html
@@ -145,6 +145,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="contact.html">LIÊN HỆ</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="gioithieu.html">GIỚI THIỆU</a>
+							</li>
 						</ul>
 						<ul class="nav navbar-nav ml-auto search">
 								<li class="nav-item d-flex align-items-center mr-10">
